[package]
name = "ch5"
version = "0.1.0"
authors = ["Evghenii <egaburov@nvidia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
gc = { version = "0.3", features = ["derive"] }
graphlib = { version = "*", features = ["no_std"] }
ref-cast = "1.0"

[dependencies.petgraph]
version = "0.5.0"
features = ["serde-1"]
