[package]
name = "procmacro1"
version = "0.1.0"
authors = ["Evghenii <egx@egx-mbp.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

